[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dns_anomaly_hijack_detector"
version = "0.1.0"
description = "Detect DNS hijacks, poisoning attempts, and resolver abuse."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
